--- a/src/app/Home.module.css
+++ b/src/app/Home.module.css
@@ -9,12 +9,13 @@
 }
 
 .contentContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 300px;
+  width: 100%;
   position: relative;
-  z-index: 1;
-  text-align: center;
-  padding: 4rem 1rem;
-  max-width: 1200px;
-  margin: 0 auto;
 }
 
 .mainTitle {
