--- a/src/app/Home.module.css
+++ b/src/app/Home.module.css
@@ -39,6 +39,7 @@
   justify-content: center;
   position: relative;
   overflow: hidden; 
+  /* min-height: 100vh; */
 }
 
 .contentContainer {
@@ -65,7 +66,20 @@
   justify-content: center;
   text-align: center;
   filter: drop-shadow(0 0 30px rgba(69, 73, 79, 0.3));
-  font-family: 'Poppins', sans-serif;
+}
+
+.subtitle {
+  font-size: 15;
+  font-weight: 400;
+  min-width: 600px;
+  background: white;
+  background-clip: text;
+  line-height: 1.2;
+  margin-bottom: 1.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
 }
 
 .sectionContainer {
