--- a/src/app/Home.module.css
+++ b/src/app/Home.module.css
@@ -15,13 +15,13 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 0 2rem;
 }
 
 .navCentre {
   max-width: 250px;
   display: flex;
   align-items: center;
+  gap: 0.3rem;
   justify-content: space-between;
   flex: content;
   margin: auto;
@@ -100,3 +100,4 @@
   line-height: 1.2;
   font-family: 'Poppins', sans-serif;
 }
+
