--- a/src/app/Landing.module.css
+++ b/src/app/Landing.module.css
@@ -1,6 +1,30 @@
-.div {
+.container {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  display: flex;
+  flex-direction: column; /* stack items vertically */
+  align-items: center;    /* center horizontally */
+  justify-content: center;
+  text-align: center;
+  gap: 1rem;              /* space between image and text */
+}
+
+.div {
+  font-size: 1.5rem;
+  font-weight: 700;
+  color: rgb(255, 255, 255);
+  text-decoration: none;
+  padding: 0.5rem 1.5rem;
+  border: 1px solid rgb(18, 23, 166);
+  background-color: rgb(33, 4, 96);
+  border-radius: 12px;
+  transition: all 0.2s;
+}
+
+.div:hover {
+  background-color: white;
+  color: #100540;
+  cursor: pointer;
 }
