--- a/src/app/about/About.module.css
+++ b/src/app/about/About.module.css
@@ -4,7 +4,7 @@
   left: 0;
   right: 0;
   z-index: 50;
-  background-color: rgba(16, 5, 64, 0.5);
+  background-color: rgba(111, 0, 246, 0.172);
   padding: 1rem 0;
   border-bottom: 1px solid rgb(51, 32, 126);
 }
@@ -33,35 +33,57 @@
 }
 
 .sectionContainer {
-  position: fixed;
-  top: 10%;
-  left: 50%;
-  transform: translateX(-50%);
+  position: relative; 
+  top: auto;          
+  left: auto;        
+  transform: none;
   z-index: 1;
   text-align: center;
+  max-width: 1200px;
+  padding-top: 80px;
+  margin: auto;
 }
 
-
 .sectionTitle {
-  font-size: 40;
-  min-width: 50rem;
+  font-size: 40px;
   font-weight: 700;
   text-align: center;
   margin-bottom: 1rem;
   background: white;
-  -webkit-background-clip: text;
   background-clip: text;
-  color: transparent;
-  line-height: 1.2;
-  font-family: 'Poppins', sans-serif;
-  background-clip: text;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
-.photoPics {
-  min-width: 75rem;
+.intro {
+  margin-top: 0.75rem;
+  margin-bottom: 0.75rem;
+  color: rgb(255, 255, 255);
+  text-align: left;
+  background: rgba(111, 0, 246, 0.172);
+  border-radius: 20px;
+  padding: 1rem;
+  border: 1px solid rgba(255, 255, 255, 0.2);
+}
+
+.description {
+  margin-top: 0.75rem;
+  margin-bottom: 0.75rem;
+  color: rgb(255, 255, 255);
+  text-align: left;
+  background: rgba(111, 0, 246, 0.172);
+  border-radius: 20px;
+  padding: 1rem;
+  border: 1px solid rgba(255, 255, 255, 0.2);
+}
+
+.photos {
   display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
-  gap: 0rem;
+}
+
+.dreamsContainer {
+  
+}
+
+.dreamEmoji {
+  font-size: 25;
 }
