--- a/src/app/about/About.module.css
+++ b/src/app/about/About.module.css
@@ -4,7 +4,7 @@
   left: 0;
   right: 0;
   z-index: 50;
-  background-color: rgba(111, 0, 246, 0.172);
+  background-color: rgb(61, 4, 131);
   padding: 1rem 0;
   border-bottom: 1px solid rgb(51, 32, 126);
 }
@@ -45,35 +45,40 @@
 }
 
 .sectionTitle {
-  font-size: 40px;
+  font-size: 45px;
   font-weight: 700;
   text-align: center;
   margin-bottom: 1rem;
   background: white;
   background-clip: text;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family:monospace;
+  font-style: italic;
 }
 
 .intro {
   margin-top: 0.75rem;
-  margin-bottom: 0.75rem;
+  margin-bottom: 2.5rem;
   color: rgb(255, 255, 255);
   text-align: left;
   background: rgba(111, 0, 246, 0.172);
   border-radius: 20px;
   padding: 1rem;
   border: 1px solid rgba(255, 255, 255, 0.2);
+  font-family: monospace;
+  font-size: 18px;
 }
 
 .description {
   margin-top: 0.75rem;
-  margin-bottom: 0.75rem;
+  margin-bottom: 2rem;
   color: rgb(255, 255, 255);
   text-align: left;
   background: rgba(111, 0, 246, 0.172);
   border-radius: 20px;
   padding: 1rem;
   border: 1px solid rgba(255, 255, 255, 0.2);
+  font-family: monospace;
+  font-size: 18px;
 }
 
 .photos {
