--- a/src/app/about/About.module.css
+++ b/src/app/about/About.module.css
@@ -4,9 +4,9 @@
   left: 0;
   right: 0;
   z-index: 50;
-  background-color: rgb(61, 4, 131);
+  background-color: rgb(39, 3, 83);
   padding: 1rem 0;
-  border-bottom: 1px solid rgb(51, 32, 126);
+  border-bottom: 1px solid rgb(62, 55, 89);
 }
 
 .navContainer {
@@ -62,9 +62,9 @@
 .intro {
   margin-top: 0.75rem;
   margin-bottom: 2.5rem;
-  color: rgb(255, 255, 255);
+  color: white;
   text-align: left;
-  background: rgba(111, 0, 246, 0.172);
+  background: rgba(111, 0, 246, 0.2);
   border-radius: 20px;
   padding: 1rem;
   border: 1px solid rgba(255, 255, 255, 0.2);
@@ -75,9 +75,9 @@
 .description {
   margin-top: 0.75rem;
   margin-bottom: 2rem;
-  color: rgb(255, 255, 255);
+  color: white;
   text-align: left;
-  background: rgba(111, 0, 246, 0.172);
+  background: rgba(111, 0, 246, 0.2);
   border-radius: 20px;
   padding: 1rem;
   border: 1px solid rgba(255, 255, 255, 0.2);
