--- a/src/app/home/Home.module.css
+++ b/src/app/home/Home.module.css
@@ -4,9 +4,9 @@
   left: 0;
   right: 0;
   z-index: 50;
-  background-color: rgba(16, 5, 64, 0.5);
+  background-color: rgb(27, 2, 57);
   padding: 1rem 0;
-  border-bottom: 1px solid rgb(51, 32, 126);
+  border-bottom: 1px solid rgb(62, 55, 89);
 }
 
 .navContainer {
@@ -21,10 +21,14 @@
   max-width: 250px;
   display: flex;
   align-items: center;
-  gap: 0.3rem;
-  justify-content: space-between;
-  flex: content;
-  margin: auto;
+  gap: 2rem;
+  justify-content: center;
+  margin: 0 auto;
+  max-width: none;
+}
+
+.divider {
+  font-size: 18px;
 }
 
 .navLink {
