run prettier write for better style

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,7 +20,9 @@
   }
 }
 
-body, html, .content {
+body,
+html,
+.content {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
@@ -33,7 +35,13 @@ body, html, .content {
 }
 
 @keyframes aurora {
-  0% { background-position: 0% 50%; }
-  50% { background-position: 100% 50%; }
-  100% { background-position: 0% 50%; }
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
 }
