--- a/src/app/home/Home.module.css
+++ b/src/app/home/Home.module.css
@@ -4,7 +4,7 @@
   left: 0;
   right: 0;
   z-index: 50;
-  background-color: rgb(27, 2, 57);
+  background-color: rgb(16, 2, 80);
   padding: 1rem 0;
   border-bottom: 1px solid rgb(62, 55, 89);
 }
@@ -117,7 +117,7 @@
 
 .dreamText {
   position: absolute;
-  top: -2rem; /* adjust for where you want it */
+  top: -2rem;
   left: 50%;
   transform: translateX(-50%) translateY(10px);
   opacity: 0;
