--- a/src/app/projects/Projects.module.css
+++ b/src/app/projects/Projects.module.css
@@ -35,3 +35,26 @@
   color: rgb(251, 251, 251);
   font-weight: 700;
 }
+
+.sectionContainer {
+  position: relative;
+  top: auto;
+  left: auto;
+  transform: none;
+  z-index: 1;
+  text-align: center;
+  max-width: 1200px;
+  padding-top: 80px;
+  margin: auto;
+}
+
+.sectionTitle {
+  font-size: 45px;
+  font-weight: 700;
+  text-align: center;
+  margin-bottom: 1rem;
+  background: white;
+  background-clip: text;
+  font-family: monospace;
+  font-style: italic;
+}
