--- a/src/app/about/About.module.css
+++ b/src/app/about/About.module.css
@@ -98,4 +98,9 @@
 
 .photos {
   display: flex;
+  flex-wrap: wrap;
+  gap: 3rem;
+  justify-content: center;
+  align-items: flex-start;
+  padding: 2rem 0;
 }
