--- a/src/app/projects/Projects.module.css
+++ b/src/app/projects/Projects.module.css
@@ -58,3 +58,37 @@
   font-family: monospace;
   font-style: italic;
 }
+
+.projectCard {
+  margin-top: 0.75rem;
+  margin-bottom: 2rem;
+  color: white;
+  text-align: left;
+  background: rgba(35, 22, 93, 0.563);
+  border-radius: 20px;
+  padding: 1rem;
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  font-family: monospace;
+  font-size: 18px;
+}
+
+.projectTitle {
+  font-size: 26px;
+  margin-bottom: 1rem;
+  font-family: monospace;
+  font-weight: 600;
+  display: flex;
+}
+
+.projectDescription {
+  margin-top: 1rem;
+  font-size: 18px;
+}
+
+.techStack {
+  margin-top: 0.5rem;
+  display: flex;
+  justify-content: left;
+  gap: 8px;
+  flex-wrap: wrap;
+}
