--- a/src/app/home/Home.module.css
+++ b/src/app/home/Home.module.css
@@ -98,21 +98,29 @@
 
 .dreamEmoji {
   font-size: 35px;
+  display: inline-block;
+  transition: all 0.3s ease;
 }
 
 .dreamText {
   position: absolute;
   top: -2rem;
   left: 50%;
-  transform: translateX(-50%) translateY(-50px);
+  transform: translateX(-50%) translateY(20px);
   opacity: 0;
-  font-size: 1rem;
+  font-size: 16px;
   color: white;
   transition: all 0.3s ease;
   pointer-events: none;
+  background-color: rgba(9, 64, 112, 0.8);
+  padding: 4px 8px;
+  border-radius: 4px;
+  z-index: 3;
 }
 
 .dreamEmojiContainer:hover .dreamText {
+  filter: drop-shadow(0 0 2px rgba(255, 255, 200, 0.7));
+  transform: scale(1.1) rotate(0deg); /* subtle pop effect */
   opacity: 1;
-  min-width: 10rem;
+  min-width: 12rem;
 }
