--- a/src/app/home/Home.module.css
+++ b/src/app/home/Home.module.css
@@ -100,6 +100,9 @@
   font-size: 35px;
   display: inline-block;
   transition: all 0.3s ease;
+  background-color: rgba(199, 188, 188, 0.01);
+  backdrop-filter: blur(10px);
+  text-shadow: 0 0 10px rgba(255, 255, 255, 0.6);
 }
 
 .dreamText {
