--- a/src/app/projects/Projects.module.css
+++ b/src/app/projects/Projects.module.css
@@ -36,6 +36,10 @@
   font-weight: 700;
 }
 
+.navLink:hover {
+  color: rgb(222, 186, 7);
+}
+
 .sectionContainer {
   position: relative;
   top: auto;
