--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -29,7 +29,7 @@ html,
   margin: 0;
   padding: 0;
   min-height: 100vh;
-  background: linear-gradient(120deg, #000000, #0f0131, #302101);
+  background: linear-gradient(120deg, #000000, #221247, rgb(2, 11, 18));
   background-size: 400% 400%;
   animation: aurora 9s ease infinite;
 }
